objects/TILBP__ThoughtIndustriesAPI__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TILBP__APIKey__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__BaseURL__c</fullName>
        <label>Base URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__BatchSize__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__DeleteBatchSize__c</fullName>
        <description>The items per deletion for the TIIntegrationQueueDelete* apex class during a sync</description>
        <label>Delete Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__RequestedRunTime__c</fullName>
        <label>Requested Run Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Thought Industries API</label>
</CustomObject>